maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:15: error: not found: value xBaggle
  while ( aBiscuit(xBaggle,yBaggle) ){
                   ^JediEscaper:15: error: not found: value yBaggle
  while ( aBiscuit(xBaggle,yBaggle) ){
                           ^JediEscaper:16: error: not found: value xBaggle
    xBaggle += 1;
    ^JediEscaper:17: error: not found: value xBaggle
    if ( xBaggle == getMondeLargeur() ){
         ^JediEscaper:18: error: not found: value xBaggle
      xBaggle = 0;
      ^JediEscaper:19: error: not found: value yBaggle
      yBaggle += 1;
      ^JediEscaper:22: error: not found: value xBaggle
  setIndication(xBaggle,yBaggle,i);
                ^JediEscaper:22: error: not found: value yBaggle
  setIndication(xBaggle,yBaggle,i);
                        ^JediEscaper:22: error: not found: value i
  setIndication(xBaggle,yBaggle,i);
                                ^JediEscaper:23: error: not found: value c
  c -= 1;
  ^JediEscaper:24: error: not found: value X
  X = xBaggle;
  ^JediEscaper:25: error: not found: value Y
  Y = yBaggle;
  ^JediEscaper:29: error: not found: value i
  i += 1;
  ^JediEscaper:30: error: not found: value c
  if ( c != 0 ){
       ^JediEscaper:33: error: not found: value i
        setIndication(x,y-1,i);
                            ^JediEscaper:34: error: not found: value c
        c-=1;
        ^JediEscaper:40: error: not found: value i
        setIndication(x-1,y,i);
                            ^JediEscaper:41: error: not found: value c
        c-=1;
        ^JediEscaper:47: error: not found: value i
        setIndication(x,y+1,i);
                            ^JediEscaper:48: error: not found: value c
        c-=1;
        ^JediEscaper:54: error: not found: value i
        setIndication(x+1,y,i);
                            ^JediEscaper:55: error: not found: value c
        c-=1;
        ^